--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>CodeSandbox Vue</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="example Telegram Login for Custom Websites">
+    <meta property="og:image" content="https://telegram.org/file/811140981/198e/vFBKEgR0JT0.198999/e73b66fefdb1020298">
+    <meta property="og:site_name" content="yho tie">
+    <meta property="og:description" content="Simple website with telegram auth login">
+    <title>Telegram Auth | yho-tie.com</title>
 </head>
 
 <body>
-	<div id="app"></div>
-	<!-- built files will be auto injected -->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
 </body>
 
 </html>
